texlive-base (2011.20120314-2) experimental; urgency=low

  * UNRELEASED
  * libpaper changes (fk):
    - include tl-paper in /usr/bin
    - add code to texlive-base.libpaper to recreate formats and
      update ls-R database after paper changes
  * replace otf/ttf fonts with links to the files in the
    respective Debian package, depend on that package

 -- Norbert Preining <preining@debian.org>  Wed, 21 Mar 2012 11:42:16 +0900

texlive-base (2011.20120314-1) experimental; urgency=low

  * new upstream with proper blacklist handling
  * do not blacklist glyphlist (Closes: #663171)

 -- Norbert Preining <preining@debian.org>  Wed, 14 Mar 2012 16:51:04 +0900

texlive-base (2011.20120226-1) experimental; urgency=low

  * new upstream, too many changes

 -- Norbert Preining <preining@debian.org>  Tue, 06 Mar 2012 21:33:13 +0900

texlive-base (2009-15) unstable; urgency=low

  [ Hilmar Preuße ]
  * Updated Italian debconf translation (Dario Santamaria).  Closes:
    #644737 

  [ Frank Küster ]
  * Update the TEXMF filename database before running texconfig in
    postinst (closes: #648652)

 -- Frank Küster <frank@debian.org>  Sun, 13 Nov 2011 23:03:22 +0100

texlive-base (2009-14) unstable; urgency=low

  [ Frank Küster ]
  * Debconf templates review and translation process initiated and
    coordinated by Christian Perrier, many thanks!
  * Debconf templates and debian/control reviewed by the debian-l10n-
    english team as part of the Smith review project.  Closes: #638715
  * Czech (Michal Simunek).  Closes: #639280
  * Russian (Yuri Kozlov).  Closes: #639427
  * Italian (Dario Santamaria).  Closes: #639512
  * Slovak (Slavko).  Closes: #639604
  * French (Alexandre Normand).  Closes: #639734
  * Swedish (Martin Bagge / brother).  Closes: #640062
  * Dutch (Jeroen Schot).  Closes: #640114
  * Danish (Joe Hansen).  Closes: #640409
  * German (Chris Leick).  Closes: #640536
  * Portuguese (Rui Branco).  Closes: #640733