@@ -367,6 +367,7 @@ special;.*/([^/]*\.info);install-info;
 # and just ignore the file
 mapping;texmf/tex/generic/config/language.dat;link;/var/lib/texmf/tex/generic/config/language.dat
 mapping;texmf/tex/generic/config/language.def;link;/var/lib/texmf/tex/generic/config/language.def
+mapping;texmf/tex/generic/config/language.dat.lua;link;/var/lib/texmf/tex/generic/config/language.dat.lua
 mapping;texmf/web2c/updmap.cfg;;
 mapping;texmf/web2c/fmtutil.cnf;;
 #
